added register page

--- a/Amit/public/index/index.html
+++ b/Amit/public/index/index.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" href="./dist/style.css">
 
     <!-- links to js files -->
-    <script src="./dist/model.js" defer></script>
+    <!-- <script src="./dist/model.js" defer></script> -->
     <script src="./dist/view.js" defer></script>
     <script src="./dist/control.js" defer></script>
    
     
     <title>ticket system</title>
 </head>
-<body onload="handleGetMovies()">
+<body onload="loggedInUser()">
 
     <div>click on a movie to order tickets</div>
 
-    <a href="../theatre/theatre.html">john wick 4</a>
+    <a href="../theatre">john wick 4</a>
     <a href="">undefined</a>
     <a href="">undefined</a>
+   
 
 
 
