wip login system

--- a/Amit/public/index/index.html
+++ b/Amit/public/index/index.html
@@ -17,6 +17,8 @@
 </head>
 <body onload="loggedInUser()">
 
+    <h1 id="userNameRoot">logged-in user name</h1>
+
     <div>click on a movie to order tickets</div>
 
     <a href="../theatre">john wick 4</a>
