--- a/Amit/public/login/index.html
+++ b/Amit/public/login/index.html
@@ -13,14 +13,14 @@
     <script src="./dist/view.js" defer></script>
     <script src="./dist/control.js" defer></script>
 
-    <title>register</title>
+    <title>login</title>
 </head>
 <body>
-    <h1>please enter a password and a user name to register</h1>
-    <form class="register-form" onsubmit="handleUserRegister(event)">
+    <h1>please enter a password and a user name to login</h1>
+    <form class="login-form" onsubmit="handleUserLogin(event)">
         <input type="name" class="name" name="name" placeholder="Enter User Name" required>
         <input type="password" class="password" name="password" placeholder="Enter Password" required>
-        <button class="register-container__btn-submit" type="submit">Register</button>
+        <button class="login-form__btn-submit" type="submit">login</button>
     </form>
 </body>
 </html>
