--- a/Amit/public/index/index.html
+++ b/Amit/public/index/index.html
@@ -15,19 +15,13 @@
     
     <title>ticket system</title>
 </head>
-<body onload="loggedInUser()">
+<body onload="loggedInUser(), renderMovies()">
 
     <h1 id="userNameRoot">logged-in user name</h1>
 
     <div>click on a movie to order tickets</div>
 
-    <a href="../theatre">john wick 4</a>
-    <a href="">undefined</a>
-    <a href="">undefined</a>
-   
-
-
-
+    <div id="moviesRoot"></div>
     
 </body>
 </html>
