--- a/Amit/public/login/index.html
+++ b/Amit/public/login/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>please enter a password and a user name to login</h1>
-    <form class="login-form" onsubmit="handleUserLogin(event)">
+    <form class="login-form" onsubmit="handleLogin(event)">
         <input type="name" class="name" name="name" placeholder="Enter User Name" required>
         <input type="password" class="password" name="password" placeholder="Enter Password" required>
         <button class="login-form__btn-submit" type="submit">login</button>
