--- a/Amit/public/index/index.html
+++ b/Amit/public/index/index.html
@@ -16,12 +16,12 @@
     <title>ticket system</title>
 </head>
 <body onload="loggedInUser(), renderMovies()">
-
+<div class="container">
     <h1 id="userNameRoot">logged-in user name</h1>
-
     <div>click on a movie to order tickets</div>
-
-    <div id="moviesRoot"></div>
+        <div class="moviesWrapper" id="moviesRoot"></div>
+</div>
+    
     
 </body>
 </html>
