--- a/Amit/public/register/index.html
+++ b/Amit/public/register/index.html
@@ -16,8 +16,8 @@
     <title>register</title>
 </head>
 <body>
-    <h1>please enter a password and a user name to register</h1>
     <form class="register-form" onsubmit="handleUserRegister(event)">
+        <h1>register</h1>
         <input type="name" class="name" name="name" placeholder="Enter User Name" required>
         <input type="password" class="password" name="password" placeholder="Enter Password" required>
         <button class="register-container__btn-submit" type="submit">Register</button>
